syntax = "proto3";
package get_by_id_service;
option csharp_namespace = "EcgAi.Data.Api.Features.Physionet.Grpc";

message GetByIdRequest{
  string transaction_id = 1;
  int32 record_id = 2;
  int32 sample_rate =3;
}

message GetByIdResponse{
  string transaction_id = 1;
  Ecg ecg = 2;
}

message DiagnosticCode{
  string scp_code = 1;
  string description = 2;
  string confidence = 3;
}

message Ecg{
  string record_name = 1;
  int32 sample_rate = 2;
  repeated EcgLead leads = 3;
  int32 record_id = 4;
  int32 age = 5;
  string sex = 6;
  string database_name = 7;
  repeated DiagnosticCode diagnostic_code =8;
}

message EcgLead{
  EcgLeadName lead_name = 1;
  repeated float signals = 2;
}

enum EcgLeadName{
  UNSPECIFIED = 0;
  I = 1;
  II = 2;
  III = 3;
  aVR = 4;
  aVL = 5;
  aVF = 6;
  V1 = 7;
  V2 = 8;
  V3 = 9;
  V4 = 10;
  V5 = 11;
  V6 = 12;
}

service GetByIdService{
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
}